# byoe

./: .gitignore  README.rst  bootstrap-no-sys-python.sh  pyproject.toml
byoe/: _globals.py  apptainer.py  byoe.py  cli.py  conda.py  conf.py  globals.py  python_venv.py  snaps.py  spack.py  util.py
example_conf/: byoe.yaml
